<resources>
    <string name="app_name">DaysCab</string>
    <string name="email">Email</string>
    <string name="facebook_app_id">313870737210409</string>
    <string name="fb_login_protocol_scheme">fb313870737210409</string>
    <string name="password">Password</string>
    <string name="pay_stack_public_key">pk_test_04ac7c1d7f025a9454d06f39ea04aebff37b109a</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="taxi_user">Taxi User</string>
    <string name="taxi_driver">Taxi Driver</string>
    <string name="api_key" translatable="false">AIzaSyBcWe0NctqwoaawBilBFBI9GTC2k0M2_7w</string>
    <string name="places_api_key" translatable="false">AIzaSyBcWe0NctqwoaawBilBFBI9GTC2k0M2_7w</string>
    <string name="send">Send</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="code_bic">Code BIC</string>
    <string name="iban">IBAN</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="password_validation_text">Password should be greater than 8 digits</string>
    <string name="account_number">Account Number</string>
    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>
    <string name="forgot_password">Forgot Passwrod</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="we_sent_4_digit_code_to_your_phone">We sent 6 digit code to your phone</string>
    <string name="home">Home</string>
    <string name="ride_history">Ride History</string>
    <string name="support">Support</string>
    <string name="sign_out">Sign out</string>
    <string name="select_pick_up_address">Select Pick Up Address</string>
    <string name="sel_destination">Select Destination Address</string>
    <string name="next">Next</string>
    <string name="book_ride">Book Ride</string>
    <string name="payment">Payment</string>
    <string name="do_payment">Do Payment</string>
    <string name="my_wallet">My Wallet</string>
    <string name="promocode">Promocode</string>
    <string name="add_account">Add Account</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_vehicle_and_pic">Add Profile Picture &amp; Vehicle</string>
    <string name="number_plate">License Plate Number</string>
    <string name="purchase_plan">Purchase Plan</string>
    <string name="_25_40_trips">$25 / 40 Trips</string>
    <string name="slide_to_begin_trip">Slide to begin Trip</string>
    <string name="slide_to_end_trip">Slide to End Trip</string>
    <string name="pick_up_passenger">Pick Up Passenger</string>
    <string name="ride_cancel_text">Are you sure want to cancel Ride?</string>
    <string name="ride_cancel_success">Ride Cancel Success</string>
    <string name="purchase">Purchase</string>
    <string name="_50_90_trips">$50 / 90 Trips</string>
    <string name="_100_120_trips">$100 / 120 Trips</string>
    <string name="arrived">Arrived</string>
    <string name="navigate">Navigate</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="race_ask">Race ask</string>
    <string name="location_of_taken_in_charge">location of taken in charge</string>
    <string name="destination_address">Destination address</string>
    <string name="fare">Fare</string>
    <string name="distance">Distance</string>
    <string name="estimated_trip_time">Estimated trip time</string>
    <string name="estimated_trip_distance">Estimated trip distance</string>
    <string name="color">Color</string>
    <string name="i_m_coming">I\'m Coming</string>
    <string name="call">Call</string>
    <string name="msg">Message</string>
    <string name="comment_opt">Comment(Optional)</string>
    <string name="rate">Rate</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="please_select_the_reason_for_cancellation">Please select the reason<br /> for cancellation:</string>
    <string name="i_don_t_want_to_share">I don’t want to share</string>
    <string name="can_t_contact_the_driver">Can\'t contact the driver</string>
    <string name="driver_is_late">Driver is late</string>
    <string name="the_price_is_not_reasonable">The price is not reasonable</string>
    <string name="pickup_address_is_incorrect">Pickup address is incorrect</string>
    <string name="your_trip_has_ended">Your trip has ended</string>
    <string name="your_taxi_has_arrived">Your taxi has arrived</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="term_text">By Continuing, I confirm that I have read and agree to the <font fgcolor="#F6E24F">Terms and Conditions</font> and <font fgcolor="#F6E24F">Privacy Policy</font>.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city_name">City</string>
    <string name="home_add">Home Address</string>
    <string name="home_address2">Home Address 2</string>
    <string name="start">Start</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rider_isn_t_here">Rider Isn\'t Here</string>
    <string name="wrong_address_shown">Wrong address shown</string>
    <string name="don_t_charge_rider">Don\'t charge Rider</string>
    <string name="rate_rider">Rate Rider</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="ok">Ok</string>
    <string name="collect_payment">Collect Payment</string>
    <string name="ride_has_ended">Ride has Ended</string>
    <string name="available_balance">Available Balance</string>
    <string name="wallet_recharge">Wallet Recharge</string>
    <string name="payment_history">Payment History</string>
    <string name="earnings">Earnings</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="enter_name_text">Please enter your name</string>
    <string name="enter_name_firsttext">Please enter your first name</string>
    <string name="enter_name_lasttext">Please enter your last name</string>
    <string name="enter_email_text">Please enter your email</string>
    <string name="enter_phone_text">Please enter your phone number</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="resend">Resend</string>
    <string name="enter_6_digit_code">Please enter 6 digit verification code</string>
    <string name="please_wait">Please wait...</string>
    <string name="check_internet_text">Please check your internet connection!</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="email_not_found">Email is not registered with us</string>
    <string name="reset_pass_msg">Reset password link sent to your mail-id</string>
    <string name="please_enter_details">Please enter your details</string>
    <string name="invalid_otp">Invalid Otp</string>
    <string name="email_exist">Email Already Exist</string>
    <string name="enter_city_text">Please select your city</string>
    <string name="enter_address1_text">Please enter your home address</string>
    <string name="enter_address2_text">Please select home address 2</string>
    <string name="enter_number_plate">Please enter number plate</string>
    <string name="mandatory_fields_text">All fields are mandatory</string>
    <string name="brand_type">Brand Type</string>
    <string name="select_vehicle_type">Please select vehicle type</string>
    <string name="enter_brand">Please enter vehicle brand</string>
    <string name="enter_model">Please enter vehicle model</string>
    <string name="vehicle_model">Model</string>
    <string name="no_data_found">No Data Found</string>
    <string name="vehicle_type">Select Vehicle Type</string>
    <string name="vehicle_make">Select Vehicle Make</string>
    <string name="select_vehicle_model">Select Vehicle Model</string>
    <string name="upload_vehicle_text">Please upload vehicle image</string>
    <string name="select_payment">Select Payment</string>
    <string name="payment_options">Payment Options</string>
    <string name="payment_type">Payment Type</string>
    <string name="select_loc">Select Location</string>
    <string name="done">Done</string>
    <string name="make">Make</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="upload_drivers_license_front">Upload Drivers License - Front</string>
    <string name="upload_drivers_license_back">Upload Drivers License - Back</string>
    <string name="upload_car_registration_certificate">Insurance Sticker</string>
    <string name="upload_vehicle_registration_book">Roadworthiness Sticker from the DVLA</string>
    <string name="select_roadworthiness_text">Select Expiry Date Roadworthiness Sticker</string>
    <string name="upload_vehicle_inspection">Vehicle Inspection Report (Optional)</string>
    <string name="upload_vehicle_inspection_report">Vehicle Inspection Report</string>
    <string name="submit">Submit</string>
    <string name="driving_licesne_text">Please upload your driving licence front</string>
    <string name="driving_licesne_back">Please upload your driving licence back</string>
    <string name="upload_registration_car">Please uplaod car registration certificate</string>
    <string name="vehicle_reg_book">Please upload vehicle registration book</string>
    <string name="year_of_manufatured">Year of manufactured</string>
    <string name="add_year_vehicle_text">Please select year of manufactured</string>
    <string name="select_pick_loc">Please select Pickup Location</string>
    <string name="select_dropoff_loc">Please select Dropoff Location</string>
    <string name="cancel">Cancel</string>
    <string name="your_request_is_successfully_accepted">Your request is successfully Accepted!</string>
    <string name="req_cancelled">Request is cancelled</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="cash">Cash Pay</string>
    <string name="card">Card Pay</string>
    <string name="wallet">Wallet Pay</string>
    <string name="select_pay_text">Please select payment method</string>
    <string name="select_car_type">Please select Car type</string>
    <string name="default_notification_channel_id">dayscab</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="plan_details">Plan Details</string>
    <string name="save">Save</string>
    <string name="manage_vehicle">Manage Vehicle</string>
    <string name="app_settings">App Settings</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="account">Account</string>
    <string name="user_s_feedback">User\'s Feedback</string>
    <string name="current_address">Current Address</string>
    <string name="active_phone_number">Active Phone number</string>
    <string name="fetching_address">Fetching Address...</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="update_account_details">Update Account details</string>
    <string name="privacy_policy_tab">Privacy Policy tab</string>
    <string name="security_tab">Security tab</string>
    <string name="signout">Signout</string>
</resources>