<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/left_arrow_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/emergency_contact"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14sdp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/name"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/yellow_outline_back"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/name"
            android:inputType="textVisiblePassword"
            android:includeFontPadding="false"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/email"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/yellow_outline_back"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/email"
            android:inputType="textVisiblePassword"
            android:includeFontPadding="false"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/current_address"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/etCurrentAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/yellow_outline_back"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/fetching_address"
            android:inputType="textMultiLine"
            android:includeFontPadding="false"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:cursorVisible="false"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/active_phone_number"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/yellow_outline_back"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/active_phone_number"
            android:includeFontPadding="false"
            android:padding="@dimen/_12sdp"
            android:maxLength="15"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/login_bt_back_yellow"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_10sdp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>