<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/llback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/blue_purchase_back"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvdetailText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_28sdp"
            android:text="@string/_25_40_trips"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvPurchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/purchase_blue_back"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/purchase"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvStdDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/purchase_blue_back"
                    android:paddingLeft="@dimen/_15sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/plan_details"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</layout>